--- a/doc/man1/openssl-verification-options.pod
+++ b/doc/man1/openssl-verification-options.pod
@@ -460,7 +460,7 @@ Set policy variable inhibit-policy-mapping (see RFC5280).
 A high-level specification of the intended use of the target certificate.
 Currently predefined purposes are C<sslclient>, C<sslserver>, C<nssslserver>,
 C<smimesign>, C<smimeencrypt>, C<crlsign>, C<ocsphelper>, C<timestampsign>,
-C<codesign> and C<any>.
+C<codesign>, C<wisunfan> and C<any>.
 If peer certificate verification is enabled, by default the TLS implementation
 and thus the commands L<openssl-s_client(1)> and L<openssl-s_server(1)>
 check for consistency with
